hw02-kuber/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-otus-service
spec:
  ports:
    - port: 8000
      targetPort: 8080
  selector:
    app: hello-otus
  type: ClusterIP
